--- a/BigDataMachineLearning-cz2.ipynb
+++ b/BigDataMachineLearning-cz2.ipynb
@@ -898,10 +898,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.utils import shuffle\n",
+    "def mp(test, predicted):\n",
+    "    tn=0\n",
+    "    tp=0\n",
+    "    fn=0\n",
+    "    fp=0\n",
+    "    for i in range(len(test)):\n",
+    "        if test[i] == predicted[i]:\n",
+    "            if test[i] == 0:\n",
+    "                tn += 1\n",
+    "            else:\n",
+    "                tp += 1\n",
+    "        else:\n",
+    "            if test[i] == 0:\n",
+    "                fn += 1\n",
+    "            else:\n",
+    "                fp += 1\n",
+    "    return tp, tn, fn, fp\n",
+    "\n",
+    "def f1(tp, tn, fn, fp):\n",
+    "    return 2*(2*tp/(2*tp+fp+fn))/2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "outputs": [],
    "source": [
     "def cross_validation(df, scaler, k, classifier):\n",
+    "    tp = 0\n",
+    "    tn = 0\n",
+    "    fn = 0\n",
+    "    fp = 0\n",
     "    mod = len(df) % k\n",
     "    if(mod != 0):\n",
     "        df.drop(df.tail(mod).index,inplace=True)\n",
@@ -918,8 +956,14 @@
     "        if classifier!= DecisionTreeClassifier(max_depth=10, class_weight=\"balanced\"):\n",
     "            y_train= ravel(y_train)\n",
     "        classifier.fit(x_train,y_train)\n",
+    "        tp1, tn1, fn1, fp1 = mp(y_test,classifier.predict(x_test))\n",
+    "        tp += tp1\n",
+    "        tn += tn1\n",
+    "        fn += fn1\n",
+    "        fp += fp1\n",
     "        resultSum += classifier.score(x_test, y_test)\n",
-    "\n",
+    "    print(\"Classification F1 - own implementation: \" +  str(f1(tp, tn, fn, fp)))\n",
+    "    print(\"Classification F1 - build function: \" +  str(f1_score(???)))\n",
     "    return resultSum/k"
    ],
    "metadata": {
