Add f1 score for cross validation

--- a/BigDataMachineLearning-cz2.ipynb
+++ b/BigDataMachineLearning-cz2.ipynb
@@ -940,6 +940,7 @@
     "    tn = 0\n",
     "    fn = 0\n",
     "    fp = 0\n",
+    "    sum_f1_score = 0\n",
     "    mod = len(df) % k\n",
     "    if(mod != 0):\n",
     "        df.drop(df.tail(mod).index,inplace=True)\n",
@@ -956,14 +957,16 @@
     "        if classifier!= DecisionTreeClassifier(max_depth=10, class_weight=\"balanced\"):\n",
     "            y_train= ravel(y_train)\n",
     "        classifier.fit(x_train,y_train)\n",
-    "        tp1, tn1, fn1, fp1 = mp(y_test,classifier.predict(x_test))\n",
+    "        predictions = classifier.predict(x_test)\n",
+    "        sum_f1_score += f1_score(y_test, predictions)\n",
+    "        tp1, tn1, fn1, fp1 = mp(y_test, predictions)\n",
     "        tp += tp1\n",
     "        tn += tn1\n",
     "        fn += fn1\n",
     "        fp += fp1\n",
     "        resultSum += classifier.score(x_test, y_test)\n",
     "    print(\"Classification F1 - own implementation: \" +  str(f1(tp, tn, fn, fp)))\n",
-    "    print(\"Classification F1 - build function: \" +  str(f1_score(???)))\n",
+    "    print(\"Classification F1 - build function: \" +  str(sum_f1_score/k)))\n",
     "    return resultSum/k"
    ],
    "metadata": {
